# HazeBot

./: .env.example  .gitignore  ACTIVITY_TRACKING_APP_FIX_PLAN.md  CHANGELOG_CURRENT.md  CONTRIBUTING.md  Config.py  DEPLOYMENT_CHECKLIST.md  FEATURES.md  LICENSE  Main.py  QUICKSTART.md  README.md  REQUIREMENTS.md  SESSION_CACHE_IMPROVEMENTS.md  SETUP_GUIDE.md  SQLITE_MIGRATION_GUIDE.md  SQLITE_QUICKSTART.md  add_permissions.py  analytics_dashboard.html  api_requirements.txt  cleanup_port.fish  pyproject.toml  ref_app.py  reprocess_analytics.py  requirements.txt  start_api_gunicorn.sh  start_with_api.py  test_api_endpoints.py  view_analytics.py
.github/: copilot-instructions.md
Cache/: rl_stats:steam:76561197993735144.json
Cogs/: APIServer.py  AnalyticsManager.py  Changelog.py  CogManager.py  DailyMeme.py  DiscordLogging.py  GamingHub.py  Leaderboard.py  LevelSystem.py  MemeGenerator.py  ModPerks.py  Preferences.py  Presence.py  Profile.py  RocketLeague.py  RoleInfo.py  ServerGuide.py  StatusDashboard.py  SupportButtons.py  TicketSystem.py  TodoList.py  Utility.py  Warframe.py  Welcome.py  _DailyMemeViews.py
Data/: activity.json
Utils/: CacheUtils.py  ConfigLoader.py  EmbedUtils.py  Env.py  Logger.py  notification_service.py
analytics/: ANALYTICS_JWT_SETUP.md  DEPLOYMENT_SUMMARY.md  README.md  analytics_dashboard.html  browser_helper.js  json_to_sqlite.py  login.html  nginx_analytics_jwt.conf  reprocess_analytics.py  test_api_endpoints.py  test_partitioning.py  test_performance.py  view_analytics.py
api/: API_REFACTORING.md  README.md  admin_routes.py  analytics.py  analytics_db.py  analytics_old_backup.py  app.py  auth.py  auth_routes.py  cache.py  cog_routes.py  community_posts_routes.py  config_routes.py  debug_routes.py  error_tracking.py  feature_analytics.py  fix_decorators.py  hazehub_cogs_routes.py  helpers.py  level_helpers.py  level_routes.py  meme_routes.py  monitoring_routes.py  notification_routes.py  rocket_league_routes.py  split_app.py  ticket_routes.py  user_routes.py
docs/: ADMIN_PANEL_SETUP.md  ANALYTICS_PROD_MODE.md  ANALYTICS_REMOTE_ACCESS.md  API_WITH_BOT.md  ARCHITECTURE.md  BOT_SETUP.md  CLOUDFLARE_TUNNEL_CONFIG.md  FEATURES.md  MONITORING.md  MONITORING_SETUP_SUMMARY.md  NGINX_ANALYTICS_CONFIG.md  NGINX_NATIVE_CONFIG.md  PERFORMANCE_OPTIMIZATION.md  QUICKSTART.md  README.md  UPTIME_KUMA_ARCHITECTURE.txt
hazebot_admin/: README.md  (+1 more)
(+31 files in other folders)
